# mathru

./: .directory  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  katex.html  rustfmt.toml
benches/: lib.rs  lu.rs  matrix.rs
benches/algebra/: mod.rs
benches/algebra/abstr/: from.rs
benches/algebra/linear/: matrix.rs
benches/analysis/: fast_ode.rs  mod.rs  ode.rs  ode_problems.rs
benches/analysis/ode/: dormandprince.rs  mod.rs  ode.rs  ode_problems.rs
example/: Cargo.toml  fit.rs  lorenz_system.rs  ode_explicit.rs  ode_implicit.rs  ode_simple.rs  ode_simple2.rs  ode_simple3.rs
examples/: dec_cholesky.rs  dec_hessenberg.rs  dec_lu.rs  dec_qr.rs  erf.rs  fit_lm.rs  gamma.rs  natural_cubic_spline.rs  normal_distribution.rs  ode_bdf.rs  ode_dormandprince.rs  ode_explicit.rs  ode_implicit_euler.rs  periodic_cubic_spline.rs  solve.rs  sqrt.rs  t_test_one_sample_two_tailed.rs
examples/algebra/linear/: dec_cholesky.rs  solve.rs
examples/analysis/: mod.rs
examples/analysis/differential_equation/: ode_bdf.rs  ode_dormandprince.rs  ode_implicit_euler.rs
examples/optimization/: fit_lm.rs
src/: lib.rs
src/algebra/: mod.rs
src/algebra/abstr/: abeliangroup.rs  abs_diff_eq.rs  bound.rs  cast.rs  complex.rs  field.rs  group.rs  identity.rs  integer.rs  lattice.rs  loop_.rs  magma.rs  mod.rs  monoid.rs  natural.rs  number.rs  operator.rs  polynomial.rs  quasigroup.rs  real.rs  relative_eq.rs  ring.rs  scalar.rs  semigroup.rs  semiring.rs  sign.rs
src/algebra/linear/: allocator.rs  backend.rs  blas.rs  lapack.rs  matrix.rs  matrixmultiply.rs  mod.rs  vector.rs
src/analysis/: function.rs  hessian.rs  jacobian.rs  mod.rs  newton_raphson.rs
src/analysis/differential_equation/: mod.rs
src/analysis/fourier/: dft.rs  mod.rs
src/analysis/integral/: mod.rs
src/analysis/interpolation/: mod.rs
src/analysis/ode/: adamsbashforth.rs  adamsmoulton.rs  adaptive_stepper.rs  backwardeuler.rs  bdf.rs  bogackishampine.rs  bogackishampine32.rs  cashkarp54.rs  dopri5.rs  dormandprince45.rs  dormandprince5.rs  dormandprince54.rs  euler.rs  explicit_method.rs  explicit_ode.rs  fixed_stepper.rs  heun.rs  implicit_euler.rs  implicit_euler_backup.rs  implicit_method.rs  implicit_ode.rs  kutta3.rs  midpoint.rs  mod.rs  ode_problem.rs  problem.rs  ralston.rs  rk4.rs  rk45.rs  rkf45.rs  rungekutta4.rs  rungekuttafehlberg45.rs  rungekuttafehlberg54.rs  solver.rs  tsitouras54.rs
src/elementary/: exponential.rs  hyperbolic.rs  mod.rs  power.rs  trigonometry.rs
src/num/: bound.rs  complex.rs  integer.rs  mod.rs  natural.rs  primitives.rs  real.rs
src/num/primitives/: lapack.rs  mod.rs
src/optim/: adagrad.rs  batchgd.rs  gaussnewton.rs  gradient.rs  gradientdesc.rs  hessian.rs  mod.rs  newton.rs  optimalgorithm.rs  optimizable.rs  rosenbrock.rs  stochasticgd.rs
src/optimization/: conjugategradient.rs  gaussnewton.rs  gradient.rs  jacobian.rs  levenbergmarquardt.rs  mod.rs  newton.rs  nonlinearcg.rs  optim.rs  optimresult.rs
src/special/: beta.rs  error.rs  gamma.rs  hypergeometric.rs  hypergeometrical.rs  mod.rs
src/statistics/: combins.rs  mod.rs
src/statistics/distrib/: bernoulli.rs  beta.rs  binomial.rs  chisquare.rs  chisquared.rs  distrib.rs  distrib_impl.rs  exponential.rs  gamma.rs  log_normal.rs  mod.rs  multinomial.rs  normal.rs  poisson.rs  raisedcosine.rs  t.rs  uniform.rs
src/statistics/test/: chisquare.rs  chisquared.rs  g.rs  mod.rs  t.rs  test.rs
src/stats/: combins.rs  mod.rs
src/stats/distrib/: bernoulli.rs  beta.rs  binomial.rs  chisquared.rs  distrib.rs  exponential.rs  gamma.rs  mod.rs  multinomial.rs  normal.rs  poisson.rs  raisedcosine.rs  t.rs  uniform.rs
src/stats/test/: chisquared.rs  g.rs  mod.rs  t.rs  test.rs
tests/: bernoullidistrib.rs  bernoullidistrib_test.rs  beta.rs  beta_test.rs  betadistrib.rs  betadistrib_test.rs  binomialdistrib.rs  binomialdistrib_test.rs  chisquareddistrib.rs  chisquareddistrib_test.rs  chisquaredtest.rs  chisquaredtest_test.rs  combins_test.rs  complex.rs  complex_test.rs  exponentialdistrib.rs  exponentialdistrib_test.rs  gammadistrib.rs  gammadistrib_test.rs  gtest_test.rs  lib.rs  matrix.rs  matrix_test.rs  natural_test.rs  normaldistrib.rs  normaldistrib_test.rs  poissondistrib_test.rs  real_test.rs  special.rs  special_test.rs  tdistrib_test.rs  vector.rs  vector_test.rs
tests/algebra/: mod.rs
tests/algebra/abstr/: abs_diff_eq.rs  cast.rs  complex.rs  identity.rs  magma.rs  mod.rs  monoid.rs  polynomial.rs  real.rs  semigroup.rs
tests/algebra/linear/: mod.rs
tests/analysis/: mod.rs  newton_raphson.rs
tests/analysis/fourier/: dft.rs  mod.rs
tests/analysis/integral/: mod.rs
tests/analysis/interpolation/: mod.rs
tests/analysis/ode/: adamsbashforth.rs  backwardeuler.rs  bdf.rs  bogackishampine23.rs  bogackishampine32.rs  cashkarp45.rs  cashkarp54.rs  dopri5.rs  dormandprince.rs  dormandprince45.rs  dormandprince54.rs  euler.rs  explicit_euler.rs  fehlberg12.rs  fehlberg45.rs  heun.rs  heun2.rs  heun3.rs  implicit_euler.rs  kutta3.rs  kutta38.rs  midpoint.rs  mod.rs  problem.rs  ralston.rs  ralston2.rs  ralston3.rs  ralston4.rs  rk4.rs  rkf45.rs  rungekutta4.rs  rungekuttafehlberg45.rs  rungekuttafehlberg54.rs  ssprk3.rs  tsitouras.rs  tsitouras54.rs
tests/elementary/: exponential.rs  hyperbolic.rs  mod.rs  power.rs  trigonometry.rs
tests/num/: complex.rs  mod.rs
tests/optim/: gaussnewton.rs  gradient.rs  interpolation.rs  leastsquare.rs  mod.rs  newton.rs
tests/optimization/: conjugategradient.rs  gaussnewton.rs  gradient.rs  levenbergmarquardt.rs  mod.rs  newton.rs  problem.rs
tests/special/: beta.rs  error.rs  gamma.rs  hypergeometrical.rs  mod.rs
tests/statistics/: combins.rs  mod.rs
tests/statistics/distrib/: bernoulli.rs  beta.rs  binomial.rs  chisquare.rs  chisquared.rs  exponential.rs  gamma.rs  log_normal.rs  mod.rs  multinomial.rs  normal.rs  poisson.rs  raisedcosine.rs  t.rs  uniform.rs
tests/statistics/test/: chisquare.rs  chisquared.rs  g.rs  mod.rs  t.rs
tests/stats/: combins.rs  mod.rs
tests/stats/distrib/: bernoulli.rs  t.rs  (+10 more)
(+523 files in other folders)
