[package]
name = "mathru"
version = "0.6.8"
description = "Mathematics library written in Rust"
authors = ["Matthias Eiholzer <matthias.eiholzer@gmail.com>"]
exclude = ["literature/*", "tests/*", "backup/*", ".gitignore"]
keywords = ["optimization", "statistics", "algebra", "matrix", "ode"]
categories = ["mathematics", "science", "algorithms"]
readme = "README.md"
license = "MIT"
homepage = "https://matthiaseiholzer.gitlab.io/mathru"
repository = "https://gitlab.com/matthiaseiholzer/mathru"
documentation = "https://docs.rs/crate/mathru/latest/"
autobenches = false
edition = "2018"


[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]

[lib]
name = "mathru"
path = "src/lib.rs"

[features]

blaslapack = ["lapack", "blas", "lapack-src", "blas-src"]
native = []

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false

[dependencies]

[dependencies.rand]
version = "0.7.3"

[dependencies.serde]
version =  "^1.0"
features = ["derive"]

[dependencies.lapack]
version = "0.16"
optional = true

[dependencies.blas]
version = "0.20"
optional = true

[dependencies.blas-src]
version = "0.6.1"
features = ["openblas"]
optional = true

[dependencies.lapack-src]
version = "0.6.0"
features = ["openblas"]
optional = true

[dependencies.mint]
version = "0.5"
optional = true

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies]
criterion = "^0.3"
nalgebra = "0.21.0"

[dev-dependencies.plotters]
version = "0.2.12"


[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false


