[package]
name = "mathru"
version = "0.15.2"
description = "Fundamental algorithms for scientific computing in Rust"
authors = ["Matthias Eiholzer <matthias.eiholzer@gmail.com>"]
exclude = ["literature/*", "tests/*", ".gitignore"]
keywords = ["optimization", "statistics", "algebra", "analysis"]
categories = ["mathematics", "science"]
readme = "README.md"
license = "MIT"
homepage = "https://rustmath.gitlab.io/mathru"
repository = "https://gitlab.com/rustmath/mathru"
documentation = "https://docs.rs/crate/mathru/latest/"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[features]
default = ["native"]
native = []
serde-serialize = ["serde"]
openblas = ["lapack", "blas", "lapack-sys", "blas-sys", "lapack-src/openblas", "blas-src/openblas"]
netlib = ["lapack", "blas", "lapack-sys", "blas-sys", "lapack-src/netlib", "blas-src/netlib"]
accelerate = ["lapack", "blas", "lapack-sys", "blas-sys", "lapack-src/accelerate", "blas-src/accelerate"]
intel-mkl = ["lapack", "blas", "lapack-sys", "blas-sys", "lapack-src/intel-mkl", "blas-src/intel-mkl"]

# Conversion
convert-mint = ["mint"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false   
lto = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
overflow-checks = false
debug = false

[dependencies]

[dependencies.rand]
version = "^0.8"

[dependencies.matrixmultiply]
version = "0.3.7"
features = ["cgemm", "threading"]

[dependencies.serde]
version =  "^1.0"
features = ["derive"]
optional = true

[dependencies.lapack]
version = "^0.19"
optional = true

[dependencies.lapack-sys]
version = "^0.14"
optional = true

[dependencies.lapack-src]
version = "^0.9"
optional = true

[dependencies.blas]
version = "^0.22"
optional = true

[dependencies.blas-sys]
version = "^0.7"
optional = true

[dependencies.blas-src]
version = "^0.9"
optional = true

[dependencies.mint]
version = "^0.5"
optional = true

[dev-dependencies.serde_json]
version = "^1.0"

[dev-dependencies.criterion]
version = "^0.5"
features = ["html_reports"]

[dev-dependencies.plotters]
version = "^0.3"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false
